Fix dashboard switching on Mobile (#20238)
- Backport #20238
  - This is a regression of improving mobile experience on Gitea, currently organization dashboard aren't readable and the popup won't show up when you want to switch between users/organization(as we saw in #19978).
  - This patch fixes that, by allowing the popup to allocate the required pixels(for some absurd reason, z-index doesn't work on the popup, so it's not able to render over the existing elements, we can investigate later of why this is). And also remove the additional dropdown menu for the pages link, so it's one unified list which then can be displayed as rows.
  - See original PR for screenshots.

--- a/web_src/less/_base.less
+++ b/web_src/less/_base.less
@@ -2194,7 +2194,7 @@ table th[data-sortt-desc] {
   .ui.stackable.menu:not(.no-vertical-tabs) {
     overflow-y: hidden;
     overflow-x: auto;
-    flex-direction: row;
+    flex-direction: row !important;
     flex-wrap: nowrap !important;
 
     .item {
